personal-web-site/resume/resume-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-web
  labels:
    app: resume-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume-web
  template:
    metadata:
      labels:
        app: resume-web
    spec:
      containers:
        - name: resume-web
          image: docker.io/wololoaeyoyo/humberto-resume:main-20260923040983 # {"$imagepolicy": "flux-system:resume-web"}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
      restartPolicy: Always
