personal-web-site/resume/resume-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-web-ingress
  namespace: personal-web-site
  annotations:
    kubernetes.io/ingress.class: cloudflare-tunnel
spec:
  rules:
    - host: resume.wololoaeyoyo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume-web-service
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-web-ingress-hraniolo
  namespace: personal-web-site
  annotations:
    kubernetes.io/ingress.class: cloudflare-tunnel
spec:
  rules:
    - host: resume.hraniolo.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume-web-service
                port:
                  number: 3000
